# Mechanics

./: .gitignore  Dockerfile  LICENSE.txt  Makefile  README.md  aff_motion.sh  baltimore.txt  cifpts.sh  gen_baltimore.sh  gen_warren.sh  geom2d_tests.sh  pyproject.toml  pyproject.toml.bak  requirements-dev.txt  requirements.txt  run_tests.sh  truss.sh  warren.txt
.github/workflows/: python-package.yml
apps/aff_transf_motion/: config.json  config.py  input.py  main.py  parse_geom.py  parse_transform.py  simulation.py  test.txt  test2.txt
apps/circle_from_points/: config.json  input.py  main.py  output.py  test.txt
apps/truss_structures/: arguments.py  main.py  output.py  result.txt  truss.txt  warren.txt
eqs/: README.md  __init__.py  cholesky.py  conjugate_gradient.py  doolitle.py  lower_system.py  lu_solve.py  matrix.py  upper_system.py  validate_sys.py  vector.py
eqs/tests/: cholesky_test.py  conjgrad_test.py  conjugate_gradient_test.py  doolitle_test.py  lower_system_test.py  matrix_test.py  upper_system_test.py  vector_test.py
geom2d/: README.md  __init__.py  affine_transf.py  affine_transforms.py  circle.py  circles.py  interpolation.py  line.py  nums.py  open_interval.py  point.py  polygon.py  polygons.py  rect.py  rects.py  segment.py  size.py  tparam.py  vector.py  vectors.py
geom2d/tests/: affine_transf_test.py  affine_transforms_test.py  circle_test.py  circles_test.py  line_test.py  point_test.py  polygon_test.py  rect_test.py  rects_test.py  (+2 more)
graphic/: README.md
structures/: README.md
utils/: README.md  lists.py  pairs.py  strings.py
(+90 files in other folders)
