[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mechanics"
version = "0.1.0"
description = "Mechanics and structural analysis tools"
authors = [
    {name = "Angel Sola Orbaiceta", email = "angelsolaorbaiceta@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tornado>=6.4.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11.4",
]

[tool.hatch.build.targets.wheel]
packages = ["structures", "geom2d", "eqs", "graphic", "utils", "apps"]

[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "B", "I"]
ignore = []
